<resources>
    <string name="app_name">飞机大战</string>
    <string name="start_background_desc">开始界面背景</string>
    <string name="settings_desc">设置</string>
    <string name="start_title">飞机大战</string>
    <string name="start_subtitle">点击开始进入战场
击败敌机并挑战首领</string>
    <string name="start_mode_simple">简单</string>
    <string name="start_mode_normal">普通</string>
    <string name="start_mode_hard">困难</string>
    <string name="start_mode_network">联机对战</string>
    <string name="network_dialog_title">网络对战设置</string>
    <string name="network_mode_label">对战模式</string>
    <string name="network_mode_pve">双人PVE</string>
    <string name="network_mode_pvp">双人PVP</string>
    <string name="network_role_label">连接角色</string>
    <string name="network_role_host">创建房间（房主）</string>
    <string name="network_role_client">加入房间（客户端）</string>
    <string name="network_emulator_mode_label">虚拟机测试模式（推荐）</string>
    <string name="network_emulator_mode_desc">客户端会自动连接 10.0.2.2，适合 Android Studio 虚拟机调试</string>
    <string name="network_emulator_mode_tip_short">虚拟机模式已启用：客户端将使用 10.0.2.2</string>
    <string name="network_host_hint">房主IP（局域网如 192.168.1.10，虚拟机常用 10.0.2.2）</string>
    <string name="network_port_hint">端口（默认 24567）</string>
    <string name="network_discovered_hosts_label">局域网房主列表</string>
    <string name="network_scan_hosts">扫描局域网房主</string>
    <string name="network_scanning">正在扫描局域网房主...</string>
    <string name="network_scan_no_hosts">未发现可连接的房主</string>
    <string name="network_scan_found_count">已发现 %1$d 个房主</string>
    <string name="network_scan_failed">扫描失败，请稍后重试</string>
    <string name="network_confirm">开始联机</string>
    <string name="network_invalid_port">端口必须在 1024-65535 之间</string>
    <string name="network_host_required">请输入房主IP</string>
    <string name="network_connecting">正在建立网络连接...</string>
    <string name="network_disconnect">连接已断开</string>
    <string name="network_retry">返回开始界面</string>
    <string name="network_waiting_client">等待客户端加入...</string>
    <string name="network_waiting_host">正在连接房主...</string>
    <string name="network_result_win">你获胜了</string>
    <string name="network_result_lose">你失败了</string>
    <string name="network_result_draw">平局</string>
    <string name="network_result_pve_success">协作胜利</string>
    <string name="network_result_pve_fail">协作失败</string>
</resources>